[package]
name = "mmolb_items"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
mmolb_parsing = { git = "https://github.com/unnamed-girl/mmolb_parsing.git" }
reqwest = { version = "0.12.22", features = ["blocking", "brotli", "gzip", "json"] }
serde = "1.0.219"
strum = "0.27.2"
